# araig_calculator

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: test1_param.yaml
msg/: Calculation_result.msg  Result.msg
scripts/: calculator
src/calculators/: comparator.py
src/calculators/comparators/: comparator_has_max_vel.py  comparator_robot_has_stopped.py
